...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Логин" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="VyB-Av-IcG">
                                <rect key="frame" x="112.5" y="318.5" width="150" height="30"/>
                                <constraints>
...
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Пароль еще раз" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dem-76-0BK">
                                <rect key="frame" x="112.5" y="410.5" width="150" height="30"/>
                                <constraints>
...
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Пароль" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ihu-Dm-SFy">
                                <rect key="frame" x="112.5" y="364.5" width="150" height="30"/>
                                <constraints>
...
                                    <constraint firstAttribute="height" constant="44" id="WnR-8y-EtK"/>
                                </constraints>
                                <state key="normal" title="Зарегистрироваться"/>
                                <connections>
                                    <action selector="register:" destination="3tX-y3-nZj" eventType="touchUpInside" id="TvS-2T-vu6"/>
...
                                    <constraint firstAttribute="width" constant="94" id="d3h-La-ZVR"/>
                                </constraints>
                                <state key="normal" title="Войти"/>
                                <connections>
                                    <action selector="enterAction:" destination="y9V-8j-K8F" eventType="touchUpInside" id="7vV-1Z-NS3"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Отобразить" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rlA-8O-MR4">
                                                    <rect key="frame" x="16" y="0.0" width="325" height="53.5"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Создать" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MfO-NT-OTI">
                                                    <rect key="frame" x="16" y="0.0" width="325" height="53.5"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Изменить" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XRH-sm-Tvf">
                                                    <rect key="frame" x="16" y="0.0" width="325" height="53.5"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Навигация" largeTitleDisplayMode="always" id="dUh-dI-vEZ">
                        <barButtonItem key="backBarButtonItem" title=" " id="PGo-8W-tNt"/>
                    </navigationItem>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Введите имя" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="yxz-qm-EFv">
                                                    <rect key="frame" x="16" y="0.0" width="343" height="43.5"/>
                                                    <nil key="textColor"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Введите должность" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="sUW-1Z-tGL">
                                                    <rect key="frame" x="16" y="0.0" width="343" height="43.5"/>
                                                    <nil key="textColor"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Зарплата" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="nVD-9Q-N8P">
                                                    <rect key="frame" x="16" y="0.0" width="343" height="43.5"/>
                                                    <nil key="textColor"/>
...
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Создание" id="dTj-fy-ggX">
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="WAx-Bq-ehc">
                            <connections>
...
                                                        <constraint firstAttribute="width" constant="54" id="paj-Fy-gYe"/>
                                                    </constraints>
                                                    <state key="normal" title="Найти"/>
                                                    <connections>
                                                        <action selector="searchAction:" destination="8lH-um-aH2" eventType="touchUpInside" id="Soc-xL-9eV"/>
...
                        </connections>
                    </tableView>
